--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ psycopg2 = "^2.9.6"
 django-extensions = "^3.2.1"
 djangorestframework = "^3.14.0"
 Pygments = "^2.15.1"
+django-crispy-forms = "^2.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
