--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ django-extensions = "^3.2.1"
 djangorestframework = "^3.14.0"
 Pygments = "^2.15.1"
 django-crispy-forms = "^2.0"
+crispy-bootstrap4 = "^2022.1"
+Pillow = "^9.5.0"
+python-barcode = "^0.14.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
