--- a/requirements.txt
+++ b/requirements.txt
@@ -7,23 +7,32 @@ click-plugins==1.1.1 ; python_version >= "3.9" and python_version < "4.0"
 click-repl==0.2.0 ; python_version >= "3.9" and python_version < "4.0"
 click==8.1.3 ; python_version >= "3.9" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and platform_system == "Windows"
-django-celery-beat==2.4.0 ; python_version >= "3.9" and python_version < "4.0"
-django-celery-results==2.4.0 ; python_version >= "3.9" and python_version < "4.0"
+crispy-bootstrap4==2022.1 ; python_version >= "3.9" and python_version < "4.0"
+cron-descriptor==1.3.0 ; python_version >= "3.9" and python_version < "4.0"
+django-celery-beat==2.5.0 ; python_version >= "3.9" and python_version < "4.0"
+django-celery-results==2.5.1 ; python_version >= "3.9" and python_version < "4.0"
+django-crispy-forms==2.0 ; python_version >= "3.9" and python_version < "4.0"
 django-environ==0.9.0 ; python_version >= "3.9" and python_version < "4"
+django-extensions==3.2.1 ; python_version >= "3.9" and python_version < "4.0"
 django-timezone-field==5.0 ; python_version >= "3.9" and python_version < "4.0"
-django==4.1.5 ; python_version >= "3.9" and python_version < "4.0"
+django==4.2.1 ; python_version >= "3.9" and python_version < "4.0"
+djangorestframework==3.14.0 ; python_version >= "3.9" and python_version < "4.0"
 flower==1.2.0 ; python_version >= "3.9" and python_version < "4.0"
-humanize==4.4.0 ; python_version >= "3.9" and python_version < "4.0"
+humanize==4.6.0 ; python_version >= "3.9" and python_version < "4.0"
 kombu==5.2.4 ; python_version >= "3.9" and python_version < "4.0"
+pillow==9.5.0 ; python_version >= "3.9" and python_version < "4.0"
 prometheus-client==0.16.0 ; python_version >= "3.9" and python_version < "4.0"
-prompt-toolkit==3.0.36 ; python_version >= "3.9" and python_version < "4.0"
-psycopg2-binary==2.9.5 ; python_version >= "3.9" and python_version < "4.0"
+prompt-toolkit==3.0.38 ; python_version >= "3.9" and python_version < "4.0"
+psycopg2-binary==2.9.6 ; python_version >= "3.9" and python_version < "4.0"
+psycopg2==2.9.6 ; python_version >= "3.9" and python_version < "4.0"
+pygments==2.15.1 ; python_version >= "3.9" and python_version < "4.0"
+python-barcode==0.14.0 ; python_version >= "3.9" and python_version < "4.0"
 python-crontab==2.7.1 ; python_version >= "3.9" and python_version < "4.0"
 python-dateutil==2.8.2 ; python_version >= "3.9" and python_version < "4.0"
-pytz==2022.7.1 ; python_version >= "3.9" and python_version < "4.0"
+pytz==2023.3 ; python_version >= "3.9" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.9" and python_version < "4.0"
-sqlparse==0.4.3 ; python_version >= "3.9" and python_version < "4.0"
-tornado==6.2 ; python_version >= "3.9" and python_version < "4.0"
-tzdata==2022.7 ; python_version >= "3.9" and python_version < "4.0"
+sqlparse==0.4.4 ; python_version >= "3.9" and python_version < "4.0"
+tornado==6.3.2 ; python_version >= "3.9" and python_version < "4.0"
+tzdata==2023.3 ; python_version >= "3.9" and python_version < "4.0"
 vine==5.0.0 ; python_version >= "3.9" and python_version < "4.0"
 wcwidth==0.2.6 ; python_version >= "3.9" and python_version < "4.0"
