--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ django-crispy-forms = "^2.0"
 crispy-bootstrap4 = "^2022.1"
 Pillow = "^9.5.0"
 python-barcode = "^0.14.0"
+django-redis = "^5.4.0"
+django-debug-toolbar = "^4.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
