--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 amqp==5.1.1 ; python_version >= "3.9" and python_version < "4.0"
 asgiref==3.6.0 ; python_version >= "3.9" and python_version < "4.0"
+async-timeout==4.0.3 ; python_version >= "3.9" and python_full_version < "3.11.3"
 billiard==3.6.4.0 ; python_version >= "3.9" and python_version < "4.0"
 celery==5.2.7 ; python_version >= "3.9" and python_version < "4.0"
 click-didyoumean==0.3.0 ; python_version >= "3.9" and python_version < "4.0"
@@ -14,6 +15,7 @@ django-celery-results==2.5.1 ; python_version >= "3.9" and python_version < "4.0
 django-crispy-forms==2.0 ; python_version >= "3.9" and python_version < "4.0"
 django-environ==0.9.0 ; python_version >= "3.9" and python_version < "4"
 django-extensions==3.2.1 ; python_version >= "3.9" and python_version < "4.0"
+django-redis==5.4.0 ; python_version >= "3.9" and python_version < "4.0"
 django-timezone-field==5.0 ; python_version >= "3.9" and python_version < "4.0"
 django==4.2.1 ; python_version >= "3.9" and python_version < "4.0"
 djangorestframework==3.14.0 ; python_version >= "3.9" and python_version < "4.0"
@@ -30,6 +32,7 @@ python-barcode==0.14.0 ; python_version >= "3.9" and python_version < "4.0"
 python-crontab==2.7.1 ; python_version >= "3.9" and python_version < "4.0"
 python-dateutil==2.8.2 ; python_version >= "3.9" and python_version < "4.0"
 pytz==2023.3 ; python_version >= "3.9" and python_version < "4.0"
+redis==5.0.4 ; python_version >= "3.9" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.9" and python_version < "4.0"
 sqlparse==0.4.4 ; python_version >= "3.9" and python_version < "4.0"
 tornado==6.3.2 ; python_version >= "3.9" and python_version < "4.0"
