--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ Pillow = "^9.5.0"
 python-barcode = "^0.14.0"
 django-redis = "^5.4.0"
 django-debug-toolbar = "^4.3.0"
+python-dotenv = "^1.0.1"
+poetry-plugin-export = "^1.8.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
