--- a/requirements.txt
+++ b/requirements.txt
@@ -2,40 +2,85 @@ amqp==5.1.1 ; python_version >= "3.9" and python_version < "4.0"
 asgiref==3.6.0 ; python_version >= "3.9" and python_version < "4.0"
 async-timeout==4.0.3 ; python_version >= "3.9" and python_full_version < "3.11.3"
 billiard==3.6.4.0 ; python_version >= "3.9" and python_version < "4.0"
+build==1.2.1 ; python_version >= "3.9" and python_version < "4.0"
+cachecontrol[filecache]==0.14.0 ; python_version >= "3.9" and python_version < "4.0"
 celery==5.2.7 ; python_version >= "3.9" and python_version < "4.0"
+certifi==2024.2.2 ; python_version >= "3.9" and python_version < "4.0"
+cffi==1.16.0 ; python_version >= "3.9" and python_version < "4.0" and (sys_platform == "darwin" or sys_platform == "linux") and (sys_platform == "darwin" or platform_python_implementation != "PyPy")
+charset-normalizer==3.3.2 ; python_version >= "3.9" and python_version < "4.0"
+cleo==2.1.0 ; python_version >= "3.9" and python_version < "4.0"
 click-didyoumean==0.3.0 ; python_version >= "3.9" and python_version < "4.0"
 click-plugins==1.1.1 ; python_version >= "3.9" and python_version < "4.0"
 click-repl==0.2.0 ; python_version >= "3.9" and python_version < "4.0"
 click==8.1.3 ; python_version >= "3.9" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and platform_system == "Windows"
+colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and (platform_system == "Windows" or os_name == "nt")
+crashtest==0.4.1 ; python_version >= "3.9" and python_version < "4.0"
 crispy-bootstrap4==2022.1 ; python_version >= "3.9" and python_version < "4.0"
 cron-descriptor==1.3.0 ; python_version >= "3.9" and python_version < "4.0"
+cryptography==42.0.7 ; python_version >= "3.9" and python_version < "4.0" and sys_platform == "linux"
+distlib==0.3.6 ; python_version >= "3.9" and python_version < "4.0"
 django-celery-beat==2.5.0 ; python_version >= "3.9" and python_version < "4.0"
 django-celery-results==2.5.1 ; python_version >= "3.9" and python_version < "4.0"
 django-crispy-forms==2.0 ; python_version >= "3.9" and python_version < "4.0"
+django-debug-toolbar==4.3.0 ; python_version >= "3.9" and python_version < "4.0"
 django-environ==0.9.0 ; python_version >= "3.9" and python_version < "4"
 django-extensions==3.2.1 ; python_version >= "3.9" and python_version < "4.0"
 django-redis==5.4.0 ; python_version >= "3.9" and python_version < "4.0"
 django-timezone-field==5.0 ; python_version >= "3.9" and python_version < "4.0"
 django==4.2.1 ; python_version >= "3.9" and python_version < "4.0"
 djangorestframework==3.14.0 ; python_version >= "3.9" and python_version < "4.0"
+dulwich==0.21.7 ; python_version >= "3.9" and python_version < "4.0"
+fastjsonschema==2.19.1 ; python_version >= "3.9" and python_version < "4.0"
+filelock==3.12.0 ; python_version >= "3.9" and python_version < "4.0"
 flower==1.2.0 ; python_version >= "3.9" and python_version < "4.0"
 humanize==4.6.0 ; python_version >= "3.9" and python_version < "4.0"
+idna==3.7 ; python_version >= "3.9" and python_version < "4.0"
+importlib-metadata==7.1.0 ; python_version >= "3.9" and python_version < "3.12"
+installer==0.7.0 ; python_version >= "3.9" and python_version < "4.0"
+jaraco-classes==3.4.0 ; python_version >= "3.9" and python_version < "4.0"
+jeepney==0.8.0 ; python_version >= "3.9" and python_version < "4.0" and sys_platform == "linux"
+keyring==24.3.1 ; python_version >= "3.9" and python_version < "4.0"
 kombu==5.2.4 ; python_version >= "3.9" and python_version < "4.0"
+more-itertools==10.2.0 ; python_version >= "3.9" and python_version < "4.0"
+msgpack==1.0.8 ; python_version >= "3.9" and python_version < "4.0"
+packaging==24.0 ; python_version >= "3.9" and python_version < "4.0"
+pexpect==4.9.0 ; python_version >= "3.9" and python_version < "4.0"
 pillow==9.5.0 ; python_version >= "3.9" and python_version < "4.0"
+pkginfo==1.10.0 ; python_version >= "3.9" and python_version < "4.0"
+platformdirs==3.5.1 ; python_version >= "3.9" and python_version < "4.0"
+poetry-core==1.9.0 ; python_version >= "3.9" and python_version < "4.0"
+poetry-plugin-export==1.8.0 ; python_version >= "3.9" and python_version < "4.0"
+poetry==1.8.3 ; python_version >= "3.9" and python_version < "4.0"
 prometheus-client==0.16.0 ; python_version >= "3.9" and python_version < "4.0"
 prompt-toolkit==3.0.38 ; python_version >= "3.9" and python_version < "4.0"
 psycopg2-binary==2.9.6 ; python_version >= "3.9" and python_version < "4.0"
 psycopg2==2.9.6 ; python_version >= "3.9" and python_version < "4.0"
+ptyprocess==0.7.0 ; python_version >= "3.9" and python_version < "4.0"
+pycparser==2.22 ; python_version >= "3.9" and python_version < "4.0" and (sys_platform == "darwin" or sys_platform == "linux") and (sys_platform == "darwin" or platform_python_implementation != "PyPy")
 pygments==2.15.1 ; python_version >= "3.9" and python_version < "4.0"
+pyproject-hooks==1.1.0 ; python_version >= "3.9" and python_version < "4.0"
 python-barcode==0.14.0 ; python_version >= "3.9" and python_version < "4.0"
 python-crontab==2.7.1 ; python_version >= "3.9" and python_version < "4.0"
 python-dateutil==2.8.2 ; python_version >= "3.9" and python_version < "4.0"
+python-dotenv==1.0.1 ; python_version >= "3.9" and python_version < "4.0"
 pytz==2023.3 ; python_version >= "3.9" and python_version < "4.0"
+pywin32-ctypes==0.2.2 ; python_version >= "3.9" and python_version < "4.0" and sys_platform == "win32"
+rapidfuzz==3.9.0 ; python_version >= "3.9" and python_version < "4.0"
 redis==5.0.4 ; python_version >= "3.9" and python_version < "4.0"
+requests-toolbelt==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
+requests==2.31.0 ; python_version >= "3.9" and python_version < "4.0"
+secretstorage==3.3.3 ; python_version >= "3.9" and python_version < "4.0" and sys_platform == "linux"
+shellingham==1.5.4 ; python_version >= "3.9" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.9" and python_version < "4.0"
 sqlparse==0.4.4 ; python_version >= "3.9" and python_version < "4.0"
+tomli==2.0.1 ; python_version >= "3.9" and python_version < "3.11"
+tomlkit==0.12.5 ; python_version >= "3.9" and python_version < "4.0"
 tornado==6.3.2 ; python_version >= "3.9" and python_version < "4.0"
+trove-classifiers==2024.4.10 ; python_version >= "3.9" and python_version < "4.0"
 tzdata==2023.3 ; python_version >= "3.9" and python_version < "4.0"
+urllib3==2.2.1 ; python_version >= "3.9" and python_version < "4.0"
 vine==5.0.0 ; python_version >= "3.9" and python_version < "4.0"
+virtualenv==20.23.0 ; python_version >= "3.9" and python_version < "4.0"
 wcwidth==0.2.6 ; python_version >= "3.9" and python_version < "4.0"
+xattr==1.1.0 ; python_version >= "3.9" and python_version < "4.0" and sys_platform == "darwin"
+zipp==3.18.1 ; python_version >= "3.9" and python_version < "3.12"
