--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ django-redis = "^5.4.0"
 django-debug-toolbar = "^4.3.0"
 python-dotenv = "^1.0.1"
 poetry-plugin-export = "^1.8.0"
+django-filter = "^24.2"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
