--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ django-debug-toolbar = "^4.3.0"
 python-dotenv = "^1.0.1"
 poetry-plugin-export = "^1.8.0"
 django-filter = "^24.2"
+django-bootstrap-icons = "^0.8.7"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
