--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ python-dotenv = "^1.0.1"
 poetry-plugin-export = "^1.8.0"
 django-filter = "^24.2"
 django-bootstrap-icons = "^0.8.7"
+django-icons = "^24.3"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
