--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,9 @@ crashtest==0.4.1 ; python_version >= "3.9" and python_version < "4.0"
 crispy-bootstrap4==2022.1 ; python_version >= "3.9" and python_version < "4.0"
 cron-descriptor==1.4.3 ; python_version >= "3.9" and python_version < "4.0"
 cryptography==42.0.7 ; python_version >= "3.9" and python_version < "4.0" and sys_platform == "linux"
+defusedxml==0.7.1 ; python_version >= "3.9" and python_version < "4.0"
 distlib==0.3.8 ; python_version >= "3.9" and python_version < "4.0"
+django-bootstrap-icons==0.8.7 ; python_version >= "3.9" and python_version < "4.0"
 django-celery-beat==2.6.0 ; python_version >= "3.9" and python_version < "4.0"
 django-celery-results==2.5.1 ; python_version >= "3.9" and python_version < "4.0"
 django-crispy-forms==2.1 ; python_version >= "3.9" and python_version < "4.0"
@@ -26,6 +28,7 @@ django-debug-toolbar==4.3.0 ; python_version >= "3.9" and python_version < "4.0"
 django-environ==0.9.0 ; python_version >= "3.9" and python_version < "4"
 django-extensions==3.2.3 ; python_version >= "3.9" and python_version < "4.0"
 django-filter==24.2 ; python_version >= "3.9" and python_version < "4.0"
+django-icons==24.3 ; python_version >= "3.9" and python_version < "4.0"
 django-redis==5.4.0 ; python_version >= "3.9" and python_version < "4.0"
 django-timezone-field==6.1.0 ; python_version >= "3.9" and python_version < "4.0"
 django==4.2.13 ; python_version >= "3.9" and python_version < "4.0"
